[DSTEW-POC] - Add Duplication Check