@@ -2,11 +2,12 @@ package uk.gov.justice.laa.dstew.payments.claims.validation.validator;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import org.junit.jupiter.api.Test;
+import uk.gov.justice.laa.dstew.payments.claims.model.AreaOfLaw;
+import uk.gov.justice.laa.dstew.payments.claims.model.Claim;
 import uk.gov.justice.laa.dstew.payments.claims.model.ValidationIssue;
+import uk.gov.justice.laa.dstew.payments.claims.model.ValidationSeverity;
 import uk.gov.justice.laa.dstew.payments.claims.validation.validator.rules.MandatoryFieldValidator;
 import uk.gov.justice.laa.dstew.payments.claims.validation.validator.rules.UniqueFileNumberValidator;
 
@@ -18,20 +19,23 @@ class ClaimValidatorTest {
 
   @Test
   void mandatoryFieldValidator_returnsErrorWhenFeeCodeMissing() {
-    Map<String, Object> claim = new HashMap<>();
+    Claim claim = new Claim();
+    // Missing areaOfLaw, officeAccountNumber, and feeCode
     ValidationContext context = ValidationContext.builder().scope("fee").build();
 
     List<ValidationIssue> issues = mandatoryFieldValidator.validate(claim, context);
 
-    assertThat(issues).hasSize(1);
-    assertThat(issues.get(0).getCode()).isEqualTo("MISSING_MANDATORY_FIELD");
-    assertThat(issues.get(0).getSeverity()).isEqualTo(ValidationIssue.SeverityEnum.ERROR);
+    assertThat(issues).hasSize(3);
+    assertThat(issues.getFirst().getCode()).isEqualTo("MISSING_MANDATORY_FIELD");
+    assertThat(issues.getFirst().getSeverity()).isEqualTo(ValidationSeverity.ERROR);
   }
 
   @Test
   void mandatoryFieldValidator_returnsNoErrorsWhenFeeCodePresent() {
-    Map<String, Object> claim = new HashMap<>();
-    claim.put("feeCode", "ABC123");
+    Claim claim = new Claim();
+    claim.setFeeCode("ABC123");
+    claim.setAreaOfLaw(AreaOfLaw.LEGAL_HELP);
+    claim.setOfficeAccountNumber("1A234B");
     ValidationContext context = ValidationContext.builder().scope("fee").build();
 
     List<ValidationIssue> issues = mandatoryFieldValidator.validate(claim, context);
@@ -41,8 +45,8 @@ class ClaimValidatorTest {
 
   @Test
   void uniqueFileNumberValidator_returnsNoErrorsWhenUfnValid() {
-    Map<String, Object> claim = new HashMap<>();
-    claim.put("uniqueFileNumber", "010120/001");
+    Claim claim = new Claim();
+    claim.setUniqueFileNumber("010120/001");
     ValidationContext context = ValidationContext.builder().build();
 
     List<ValidationIssue> issues = uniqueFileNumberValidator.validate(claim, context);
@@ -52,33 +56,33 @@ class ClaimValidatorTest {
 
   @Test
   void uniqueFileNumberValidator_returnsErrorWhenUfnFormatInvalid() {
-    Map<String, Object> claim = new HashMap<>();
-    claim.put("uniqueFileNumber", "invalid-format");
+    Claim claim = new Claim();
+    claim.setUniqueFileNumber("invalid-format");
     ValidationContext context = ValidationContext.builder().build();
 
     List<ValidationIssue> issues = uniqueFileNumberValidator.validate(claim, context);
 
     assertThat(issues).hasSize(1);
-    assertThat(issues.get(0).getCode()).isEqualTo("INVALID_UNIQUE_FILE_NUMBER_FORMAT");
+    assertThat(issues.getFirst().getCode()).isEqualTo("INVALID_UNIQUE_FILE_NUMBER_FORMAT");
   }
 
   @Test
   void uniqueFileNumberValidator_returnsErrorWhenUfnDateInFuture() {
-    Map<String, Object> claim = new HashMap<>();
+    Claim claim = new Claim();
     // Use a date far in the future
-    claim.put("uniqueFileNumber", "010199/001");
+    claim.setUniqueFileNumber("010199/001");
     ValidationContext context = ValidationContext.builder().build();
 
     List<ValidationIssue> issues = uniqueFileNumberValidator.validate(claim, context);
 
     // Date 01/01/99 is interpreted as 2099 which is in the future
     assertThat(issues).hasSize(1);
-    assertThat(issues.get(0).getCode()).isEqualTo("INVALID_DATE_IN_UNIQUE_FILE_NUMBER");
+    assertThat(issues.getFirst().getCode()).isEqualTo("INVALID_DATE_IN_UNIQUE_FILE_NUMBER");
   }
 
   @Test
   void uniqueFileNumberValidator_returnsNoErrorsWhenUfnMissing() {
-    Map<String, Object> claim = new HashMap<>();
+    Claim claim = new Claim();
     ValidationContext context = ValidationContext.builder().build();
 
     List<ValidationIssue> issues = uniqueFileNumberValidator.validate(claim, context);
